--- a/htroot/AccessGrid_p.html
+++ b/htroot/AccessGrid_p.html
@@ -8,43 +8,43 @@
         float:left;
       }
     </style>
-
-  <script type="text/javascript">
-  <!--
-    imagestub="AccessPicture_p.png?width=1024&height=576&colorback=FFFFFF&amp;colortext=AAAAAA&amp;colorgrid=333333&amp;colordot=33CC33&amp;colorline=555555&ct=5000&coronaangle=";
-    imageanimindex=0;
-    imageloadindex=0;
-    imagecycles=0;
-    imagearray=[];
-    setTimeout("initanimation()",100);
-    setTimeout("doanimation()",1000);
-    function initanimation(){
-      handle=new Date().getTime();
-      for(j=0;j<6;j++)initanimationphase(j, handle);
-    }
-    function initanimationphase(phase, handle) {
-      imagearray[phase]=new Image(1024, 576);
-      angle=phase*60;
-      imagearray[phase].src=imagestub+angle+"&handle="+handle;
-    }
-    function doanimation() {
-      var accessPicture=document.getElementById("AccessPicture");
-      if (accessPicture!=null) {
-        accessPicture.src=imagearray[imageanimindex].src;
-        imageanimindex++;
-        if(imageanimindex==6){imageanimindex=0;}
-        imagecycles++;
-        if(imagecycles==25){
-          initanimationphase(imageloadindex,new Date().getTime());
-          imageloadindex++;
-          if(imageloadindex==6){imageloadindex=0;}
-          imagecycles=0;
-        }
-        setTimeout("doanimation()",100);
+    <script type="text/javascript">
+      <!--
+      imagestub="AccessPicture_p.png?width=1024&height=576&colorback=FFFFFF&amp;colortext=AAAAAA&amp;colorgrid=333333&amp;colordot=33CC33&amp;colorline=555555&ct=5000&coronaangle=";
+      imageanimindex=0;
+      imageloadindex=0;
+      imagecycles=0;
+      imagearray=[];
+      setTimeout("initanimation()",100);
+      setTimeout("doanimation()",1000);
+      function initanimation(){
+        handle=new Date().getTime();
+        for(j=0;j<6;j++)initanimationphase(j, handle);
       }
-    }
-  -->
-  </script>
+      function initanimationphase(phase, handle) {
+        imagearray[phase]=new Image(1024, 576);
+        angle=phase*60;
+        imagearray[phase].src=imagestub+angle+"&handle="+handle;
+      }
+      function doanimation() {
+        var accessPicture=document.getElementById("AccessPicture");
+        if(accessPicture!=null){
+          accessPicture.src=imagearray[imageanimindex].src;
+          imageanimindex++;
+          if(imageanimindex==6){imageanimindex=0;}
+          imagecycles++;
+          if(imagecycles==25){
+            initanimationphase(imageloadindex,new Date().getTime());
+            imageloadindex++;
+            if(imageloadindex==6){imageloadindex=0;}
+            imagecycles=0;
+          }
+          setTimeout("doanimation()",100);
+        }
+      }
+      -->
+    </script>
+    
   </head>
   <body id="Network">
     #%env/templates/header.template%#
@@ -58,5 +58,7 @@
     </div>
     
     #%env/templates/footer.template%#
+    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   </body>
 </html>
