--- a/htroot/AccessGrid_p.html
+++ b/htroot/AccessGrid_p.html
@@ -9,7 +9,7 @@
       }
     </style>
 
-    <script type="text/javascript">
+    <script type="text/typescript">
       import {React} from 'react';
       import {ReactDOM} from 'react-dom';
       <!--
@@ -60,7 +60,7 @@
         </div>
         #%env/templates/footer.template%#
       );
-      ReactDOM.render(body,document.getElementsByTagName('body'));
+      ReactDOM.render(body,document.getElementsByTagName('body')[0]);
     </script>  
   </head>
 
