--- a/htroot/AccessTracker_p.html
+++ b/htroot/AccessTracker_p.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" >
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <title>YaCy '#[clientname]#': Access Tracker</title>
     #%env/templates/metas.template%#
-    <script type="text/javascript" src="js/sorttable.js" async="async"></script>
+    <script type="text/typescript" src="ts/sorttable.ts" async="async"></script>
     <script type="text/typescript">
       const body=(
         #%env/templates/header.template%#
